--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,10 @@ branches:
   - master
   - develop
 
+environment:
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true  # Don't download unneeded packages
+  DOTNET_CLI_TELEMETRY_OPTOUT: true        # Don't send telemetry
+
 install:
   - ps: |
       Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force | Out-Null
