Enable setting line-number breakpoints in DSC resources
This change enables the use of line-number breakpoints in DSC resources
when using a currently unreleased version of PowerShell DSC.  This
functionality may appear in a later version of PowerShell and DSC.

--- a/src/PowerShellEditorServices/PowerShellEditorServices.csproj
+++ b/src/PowerShellEditorServices/PowerShellEditorServices.csproj
@@ -34,10 +34,7 @@
   </PropertyGroup>
 
   <Target Name="PowerShellVersionOutput" BeforeTargets="Compile">
-    <Message
-      Condition=" '$(TargetFramework)' == 'net451' And '$(PowerShellVersion)' != '' "
-      Text="Target PowerShell Version: $(PowerShellVersion) -- Constants: $(DefineConstants)"
-      Importance="High" />
+    <Message Condition=" '$(TargetFramework)' == 'net451' And '$(PowerShellVersion)' != '' " Text="Target PowerShell Version: $(PowerShellVersion) -- Constants: $(DefineConstants)" Importance="High" />
   </Target>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net451' And '$(PowerShellVersion)' == 'v3' ">
