Modify build script's Build task to not build solution
This change modifies the build script so that it doesn't build the entire
solution file.  This is needed because the test projects depend on net452
now due to xUnit requirements; building the solution with both net451 and
net452 was causing compilation errors, so it was better to just take that
out and let "dotnet test" build the test projects on demand.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,12 +28,7 @@
             "taskName": "Build",
             "suppressTaskName": true,
             "isBuildCommand": true,
-            "args": [ "Invoke-Build BuildHost" ]
-        },
-        {
-            "taskName": "Full Build",
-            "suppressTaskName": true,
-            "args": [ "Invoke-Build" ]
+            "args": [ "Invoke-Build Build" ]
         },
         {
             "taskName": "Test",
