--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,10 @@ environment:
 
 install:
   - ps: |
+
       Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force | Out-Null
+      Import-PackageProvider NuGet -Force | Out-Null
+      Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
       Install-Module InvokeBuild -RequiredVersion 3.2.1 -Scope CurrentUser -Force | Out-Null
 
 build_script:
