Add new Commands submodule to expose useful commands inside editor
This change adds a new PowerShellEditorServices.Commands module that
gets loaded inside of the editor session's runspace to provide functions
and cmdlets which are useful when working with the $psEditor APIs.  This
will also be the place where built-in "editor commands" are registered
when the session initializes.

Resolves #403.
Resolves PowerShell/vscode-powershell#784.

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ lock
 registered_data.ini
 .vs/
 .dotnet/
-module/
-
+module/Plaster
+module/PSScriptAnalyzer
 docs/_site/
 docs/_repo/
 docs/metadata/
