Help and manifest fixes
- Added online link to markdown help.

- Converted comment based help of Register-EditorCommand and
  UnregisterEditorCommand to markdown.

- Fixed psedit not being exported.

- Added cleanup of generated MAML file to build script.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ PowerShellEditorServices.sln.ide/edb.chk
 PowerShellEditorServices.sln.ide/edbres00001.jrs
 PowerShellEditorServices.sln.ide/storage.ide
 *.jrs
+
+# Don't include PlatyPS generated MAML
+module/PowerShellEditorServices/Commands/en-US/*-help.xml
