--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ install:
       Import-PackageProvider NuGet -Force | Out-Null
       Set-PSRepository -Name PSGallery -InstallationPolicy Trusted | Out-Null
       Install-Module InvokeBuild -RequiredVersion 3.2.1 -Scope CurrentUser -Force | Out-Null
+      Install-Module platyPS -RequiredVersion 0.7.6 -Scope CurrentUser -Force | Out-Null
 
 build_script:
   - ps: Invoke-Build -Configuration Release
