--- a/src/PowerShellEditorServices.Server/PowerShellEditorServices.Host.csproj
+++ b/src/PowerShellEditorServices.Server/PowerShellEditorServices.Host.csproj
@@ -5,7 +5,7 @@
     <AssemblyTitle>PowerShell Editor Services Host Process</AssemblyTitle>
     <Description>Provides a process for hosting the PowerShell Editor Services library exposed by a JSON message protocol.</Description>
     <TargetFrameworks>net451;netstandard1.6</TargetFrameworks>
-    <AssemblyName>Microsoft.PowerShell.EditorServices.Host</AssemblyName>
+    <AssemblyName>Microsoft.PowerShell.EditorServices.Server</AssemblyName>
     <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.6' ">$(PackageTargetFallback);dnxcore50;portable-net45+win8</PackageTargetFallback>
   </PropertyGroup>
 
