--- a/.gitignore
+++ b/.gitignore
@@ -63,5 +63,8 @@ PowerShellEditorServices.sln.ide/storage.ide
 # Don't include PlatyPS generated MAML
 module/PowerShellEditorServices/Commands/en-US/*-help.xml
 
+# Don't include Third Party Notices in module folder
+module/PowerShellEditorServices/Third\ Party\ Notices.txt
+
 # Visual Studio for Mac generated file
 *.userprefs
